src/app/two-players/two-players.component.css
.quizrt-l-container {
  height: 100vh;
  width: 100%;
  background: #403dd5;
  /* box-sizing: border-box; */
}

.quizrt-l-container__nav {
  display: flex;
  justify-content: space-between;
  padding: 20px;
  align-items: center;
}

.home, .end {
  width: 100%;
  text-align: center;
  color: white;
}

.question-container {
  display: flex;
  padding: 30px;
  flex-direction: column;
}

.game-status {
  text-align: center;
}

.quizrt-c-gameplay {
  display: flex;
  height: 100%;
  padding: 20px;
  background: #403dd5;
  align-items: center;
  flex-direction: column;
}

.score-container {
  display: flex;
  width: 100%;
  /* background: whitesmoke; */
  justify-content: space-between;
}

.score-container-player {
  padding: 15px;
  display: flex;
  text-align: center;
  flex-direction: column;
}

.quizrt-c-gameplay__loader {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.quizrt-c-gameplay__loader__image {
  height: 100px;
  width: 100px;
}

.quizrt-c-text {
  color: white;
}

.quizrt-c-gameplay__loader__msg {
  margin-top: 20px;
}

.question-start-timer {
  height: 100%;
  width: 100%;
  background-size: 100% 200%;
  background-image: linear-gradient(to bottom, #F06543  50%, white 50%);
  -webkit-transition: background-position 10s;
  -moz-transition: background-position 10s;
  animation: an 10s;
  animation-iteration-count: 7;
  transition: all ease-in;
}

@keyframes an {
  from {
    background-position: 0% 100%;
  }
  to {
    background-position: 0% 200%;
  }
}

@-webkit-keyframes an{
  from {
    background-position: 0% 100%;
  }
  to {
    background-position: 0 -100%;
  }
}
.questions {
  width: 100% !important;
  min-width: 100% !important;
  /* margin: 30px 20px 30px; */
  color: #021C27;
  border-radius: 8px;
}

.options {
  width:80%;
  font-size: 1.2em !important;
  margin: auto;
  display: inline-flex;
  flex-direction: column;
  font-family: 'Product Sans';
  color:black;
}

.question-title {
  flex-wrap: wrap;
}
#clock{
  width:30%;
  height: 3rem;
  margin: auto;
  background-color:#02C39A;
  /* background-color: #05668D; */
  font-size: 20px;
  color:white;
  text-align: center;

 }

 .score{
   flex-direction: row;
   color:white;
   font-size: 1.5rem;
 }
/* .end{
  position: absolute;
  top: 90%;
    left: 90%
} */

/* .noOpponent{
  color: #02C39A; */
  /* font-size: 25px;
}*/

.back{
  display: inline-flex;
  flex-direction: row;
  justify-content: center;
  /* width:60%; */
  /* margin-left: 20%; */
  /* font-size: 25px; */
  align-content: center;
  background: #403dd5;
  font-style: normal;
  align-items: center;
  justify-content: space-between;
}


.back_button{
  margin-right: 55px;
  background-color: white;
}
.result {
    /* width:60%;
    height:60%; */
    margin:auto;
    margin-top: 30px;
}
.result .button{
  margin-left: 10%;
   color: #028090;
   font-style: bold;
   font-size: 25px;
   width: 30%;
}
 .two-players{
   background-color:#403dd5;
   width:100%;
   height:100%;
   box-sizing: border-box;
 }

 h5{
   color: white;
 }

@media(max-width:767px){
  .play{
    height:3rem;
    margin-left: 40%;
    font-size: 15px;
    width: 30%;
   }
   .questions{
    font-size: 15px;
    margin-top: 3rem;
    font-family: 'Product Sans';
  }

 .result{
  margin-top: 7rem;
  font-family: 'Product Sans';
 }
.result .button{
 font-size: 15px;
}
 mat-grid-list{
  width:80%;
  margin: auto;
 font-size: 15px;
 text-align: center;

}
#clock{
  font-size: 15px;
  height: 2rem;
}

.end{
  margin-top:0;
  float:right;
  margin-right:0;
}

}

